# bobby

./: README.md
BST/: Cargo.toml
BST/src/: main.rs  tree.rs
KinesthesiaPt2/: HELP.md
KinesthesiaPt2/src/main/java/_0/localhost/kinesthesia/: KinesthesiaApplication.java  ResController.java  ResRepository.java  Result.java  ResultNotFoundException.java
KinesthesiaPt2/src/test/java/_0/localhost/kinesthesia/: KinesthesiaApplicationTests.java
SHAOLINCAPITAL2/: Cargo.toml
SHAOLINCAPITAL2/src/: main.rs
aoc_2024/: Cargo.toml
aoc_2024/headie_one/: Cargo.toml
aoc_2024/headie_one/src/: main.rs
aoc_2024/quatero/: Cargo.toml
aoc_2024/quatero/src/: main.rs
aoc_2024/test1/: Cargo.toml
aoc_2024/test1/src/: main.rs
aoc_2024/test2/: Cargo.toml
aoc_2024/test2/src/: main.rs
aoc_2024/tree/: Cargo.toml
aoc_2024/tree/src/: main.rs
aoc_2024/twocann/: Cargo.toml
aoc_2024/twocann/src/: main.rs
aoc_2024/util_aoc/: Cargo.toml
aoc_2024/util_aoc/src/: aoc_io.rs  dsa.rs  lib.rs  main.rs
aoc_2024/z_dump/: ballz.txt  file_name.txt  te.ts
dark/: Cargo.toml  kvs.bash  log.txt
dark/src/: client.rs  lib.rs  server.rs
dark/src/engines/: kv.rs  mod.rs  sled.rs
dark/src/threadpools/: TP.rs  mod.rs  naive.rs
kvs/: Cargo.toml
kvs/src/: kv.rs  log.txt
kvs/tests/: tests.txt
simple/: Cargo.toml
simple/src/: connection.rs  ds.rs  lib.rs
tivoli/: Cargo.toml
tivoli/src/: main.rs  table.rs
tree/src/: main.rs  tree.rs
xpress_eval/: Cargo.toml
xpress_eval/src/: main.rs  stack.rs
