[package]
name = "kvs"
version = "0.1.0"
authors = ["gasdsd"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"