[package]
name = "tivoli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
bytes = "1.8.0"
csv-async = "1.3.0"
futures = "0.3.31"
reqwest = {version = "0.12.8", features = ["json"]}
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.16"
